# NL-to-SQL

backend/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  build.ps1  pyproject.toml  start.py
backend/src/: main.py
backend/src/models/: schemas.py
backend/src/services/: database_manager.py  file_processor.py  llm_service.py
frontend/my-app/: package-lock.json  package.json
frontend/my-app/app/: page.tsx
frontend/my-app/app/components/: DataPreview.tsx  FileUpload.tsx  PromptInput.tsx  QueryResults.tsx
