[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Moe1177 <maddasi04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
fastapi = "^0.115.12"
isort = "^6.0.1"
pre-commit = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
